--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.2.1
+  charts_flutter: ^0.12.0
+  get: ^4.6.6
+  data_table_2: ^2.5.15
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -23,7 +27,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  get: ^4.6.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
